--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'MuseoSansRounded';
-  src: url('./assets/fonts/MuseoSansRounded-700.woff2') format('woff2');
+  src: url('./assets/fonts/MuseoSansRounded-700.otf') format('otf');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Gotham';
-  src: url('./assets/fonts/Gotham-Light.woff2') format('woff2');
+  src: url('./assets/fonts/Gotham-Light.otf') format('otf');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Gotham';
-  src: url('./assets/fonts/Gotham-Medium.woff2') format('woff2');
+  src: url('./assets/fonts/Gotham-Medium.otf') format('otf');
   font-weight: 500;
   font-style: normal;
 }
